@@ -13,10 +13,7 @@
 
 package org.eclipse.jetty.start.usecases;
 
-import java.io.File;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
@@ -25,6 +22,7 @@ import java.util.Set;
 import org.eclipse.jetty.toolchain.test.FS;
 import org.junit.jupiter.api.Test;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
@@ -40,49 +38,46 @@ public class DatabaseTest extends AbstractUseCase
         FS.ensureDirExists(baseDir.resolve("modules"));
         FS.ensureDirExists(baseDir.resolve("lib"));
         FS.ensureDirExists(baseDir.resolve("lib/db"));
-        Files.write(baseDir.resolve("etc/db.xml"),
-            Collections.singletonList(
-                "<!-- build up org.eclipse.jetty.plus.jndi.Resource here  -->"
-            ),
-            StandardCharsets.UTF_8);
+        Files.writeString(baseDir.resolve("etc/db.xml"),
+            """
+            <!-- build up org.eclipse.jetty.plus.jndi.Resource here  -->
+            """, UTF_8);
         FS.touch(baseDir.resolve("lib/db/bonecp.jar"));
         FS.touch(baseDir.resolve("lib/db/mysql-driver.jar"));
-        Files.write(baseDir.resolve("modules/db.mod"),
-            Arrays.asList(
-                "[lib]",
-                "lib/db/*.jar",
-                "[xml]",
-                "etc/db.xml"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("start.ini"),
-            Arrays.asList(
-                "--modules=main,db",
-                "mysql.user=frank",
-                "mysql.pass=secret"
-            ),
-            StandardCharsets.UTF_8);
+        Files.writeString(baseDir.resolve("modules/db.mod"),
+            """
+            [lib]
+            lib/db/*.jar
+            [xml]
+            etc/db.xml
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("start.ini"),
+            """
+            --modules=main,db
+            mysql.user=frank
+            mysql.pass=secret
+            """, UTF_8);
 
         // === Execute Main
         List<String> runArgs = Collections.emptyList();
         ExecResults results = exec(runArgs, false);
 
         // === Validate Resulting XMLs
-        List<String> expectedXmls = Arrays.asList(
-            "${jetty.home}/etc/base.xml".replace('/', File.separatorChar),
-            "${jetty.home}/etc/main.xml".replace('/', File.separatorChar),
-            "${jetty.base}/etc/db.xml".replace('/', File.separatorChar)
+        List<String> expectedXmls = List.of(
+            FS.separators("${jetty.home}/etc/base.xml"),
+            FS.separators("${jetty.home}/etc/main.xml"),
+            FS.separators("${jetty.base}/etc/db.xml")
         );
         List<String> actualXmls = results.getXmls();
         assertThat("XML Resolution Order", actualXmls, contains(expectedXmls.toArray()));
 
         // === Validate Resulting LIBs
-        List<String> expectedLibs = Arrays.asList(
-            "${jetty.home}/lib/base.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/main.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/other.jar".replace('/', File.separatorChar),
-            "${jetty.base}/lib/db/bonecp.jar".replace('/', File.separatorChar),
-            "${jetty.base}/lib/db/mysql-driver.jar".replace('/', File.separatorChar)
+        List<String> expectedLibs = List.of(
+            FS.separators("${jetty.home}/lib/base.jar"),
+            FS.separators("${jetty.home}/lib/main.jar"),
+            FS.separators("${jetty.home}/lib/other.jar"),
+            FS.separators("${jetty.base}/lib/db/bonecp.jar"),
+            FS.separators("${jetty.base}/lib/db/mysql-driver.jar")
         );
         List<String> actualLibs = results.getLibs();
         assertThat("Libs", actualLibs, containsInAnyOrder(expectedLibs.toArray()));
